--- a/community/demo-signup.html
+++ b/community/demo-signup.html
@@ -1,7 +1,10 @@
 ---
 layout: circle-community
 title: Demo Session Sign Up
+robots: noindex, nofollow
+redirect_to: /community/
 ---
+
 <div class="c-hero" style="margin-bottom: 0">
     <div class="c-hero-content">
         <h1 class="c-main-heading">
