--- a/community/index.html
+++ b/community/index.html
@@ -1,130 +1,198 @@
 ---
 layout: circle-community
-title: AI for Clinicians Community
+title: Join the AI for Clinicians Community
 ---
-<div class="c-hero">
+
+<section class="c-hero">
     <div class="c-hero-content">
-        <span class="c-badge">
-            <!-- <span>🚀</span> -->
-            <span>Launching Soon</span>
-        </span>
 
-        <h1 class="c-main-heading text-left">
-            Discounts on AI tools<br>
-            <span class="c-highlight">Join like-minded clinicans</span>
-            <br>Stay up to date on the latest issues<br>
-            <span class="c-highlight">Learn about the newest tools and features</span>
-            <br>Network with peers as interested in AI as you
+        <h1 class="c-main-heading">Join a Community of Clinicians<br><span class="c-highlight">Learn How to Use AI</span></h1>
+        <p class="c-subtitle">Join our community of clinicians and unlock exclusive resources, expert guidance, and networking opportunities.</p>
 
-        </h1>
-        <div class="c-features">
-            <div class="c-feature">
-                <div class="c-feature-icon">💡</div>
-                <h3>Resources</h3>
-                <p>We are adding to a resource library so your subscription gets you more value over time.
-                    <strong>Coming Soon</strong>
-                </p>
-            </div>
-            <div class="c-feature">
-                <div class="c-feature-icon">🤝</div>
-                <h3>Collaborative Community</h3>
-                <p>Learn from clinicians using the tools you are using and learn about exciting new ones. You
-                    will also be able to connect to founders, developers, IT and legal experts.</p>
-            </div>
-            <div class="c-feature">
-                <div class="c-feature-icon">⚡</div>
-                <h3>Courses and Events</h3>
-                <p>Learn how to use AI, get started and develop mastery within the platform. Ask questions
-                    and access live or past events.</p>
-            </div>
+        <div class="cta-buttons">
+            <a href="#memberships" class="c-submit-button">View Membership Options</a>
+            <a href="https://aiforclin.circle.so" target="_blank" class="c-submit-button">Visit the Community</a>
         </div>
     </div>
-</div>
+</section>
 
-<div class="c-bottom-section">
-    <h2>Secure Your Early Access</h2>
-    <p>This is just an expression of interest.<br>Waitlist signees get exclusive access to early bird
-        membership.</p>
+<section class="video-and-benefits-section">
+    <h2 class="section-header">What You'll Get as a Member</h2>
+    <div class="video-benefits-content">
+        <div class="video-placeholder"></div>
+        <ul class="benefits-list">
+            <li>
 
-    <form id="waitlistForm">
-        <div class="c-form-wrapper">
-            <input type="text" name="website" id="hp" style="position: absolute; left: -9999px;" autocomplete="off"
-                tabindex="-1" />
-            <div class="c-form-grid">
-                <input type="text" id="name" class="c-text-input" placeholder="Your Name" required>
-                <input type="email" id="email" class="c-text-input" placeholder="Your Email" required>
-                <input type="text" id="phone" class="c-text-input" placeholder="Your Phone Number" required>
+            <div class="benefit-header">
+                <img src="/community/images/gold-discussion.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Organised Discussions</h3>
             </div>
-
-            <div class="c-checkbox-wrapper">
-                <input type="checkbox" id="contributorCheckbox">
-                <label for="contributorCheckbox">
-                    I want to gain Exclusive Discounts and Join as a Super Member
-                    <span class="tooltip">
-                        <span class="tooltip-trigger">?</span>
-                        <span class="tooltip-text">Exclusive discounts and recognition for members who
-                            actively help build the community. Spots are limited and subject to approval.</span>
-                    </span>
-                </label>
-
+            <p class="benefit-description">Engage in meaningful converstaions and stay up-to-date in a single place that has more structure than your typical social media platform.</p>
+        </li>
+        <li>
+            <div class="benefit-header">
+                <img src="/community/images/gold%20people.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Network</h3>
             </div>
+            <p class="benefit-description">Connect with professional clinicians and industry experts who are actively engaged in AI use within clinical practice.</p>
+        </li>
+        <li>
+            <div class="benefit-header">
+                <img src="/community/images/gold%20calendar.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Events</h3>
+            </div>
+            <p class="benefit-description">Explore new topics and ideas with events and workshops.</p>
+        </li>
+        <li>
+            <div class="benefit-header">
+                <img src="/community/images/gold-book.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Resources & Courses</h3>
+            </div>
+            <p class="benefit-description">Gain access to exclusive resources and courses created by experts.</p>
+        </li>
+                <li>
+            <div class="benefit-header">
+                <img src="/community/images/gold%20laptop.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Discounted Tools</h3>
+            </div>
+            <p class="benefit-description">Gain access to discounted tools and learn from like-minded clinicians on how to use them.</p>
+        </li>
+        </ul>
+    </div>
+</section>
 
-            <div class="c-contributor-fields" id="contributorFields">
-                <h4>Super Member</h4>
-                <div class="c-field-group">
-                    <label for="profession">What is your profession?</label>
-                    <select id="profession" class="c-select-input">
-                        <option value="">Select your profession</option>
-                        <option value="occupational-therapist">Occupational Therapist</option>
-                        <option value="physiotherapist">Physiotherapist</option>
-                        <option value="psychologist">Psychologist</option>
-                        <option value="social-worker">Social Worker</option>
-                        <option value="speech-pathologist">Speech Pathologist</option>
-                        <!-- <option value="dietitian">Dietitian</option> -->
-                        <!-- <option value="podiatrist">Podiatrist</option> -->
-                        <option value="other">Other Clinical Professional</option>
-                    </select>
+<h2 id="memberships" class="section-header">Membership Options</h2>
+<section class="c-features" aria-label="Membership plans">
+    <article class="c-feature">
+        <header class="card-header">
+            <div class="header-title margin-top">
+                <h3 id="super-member-plan">Super Member</h3>
+            </div>
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>This is for active active who want to proactively develop discussions and support fellow members.</p>
+        </header>
+        <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-currency">$</span>5.90
                 </div>
-                <div class="c-field-group">
-                    <label for="contentType">How would you like to contribute?</label>
-                    <select id="contentType" class="c-select-input">
-                        <option value="">Select contribution type</option>
-                        <option value="networking">Networking and Outreach</option>
-                        <option value="courses-and-workshops">Courses and Workshops</option>
-                        <option value="events-and-webinars">Events and Webinars</option>
-                        <option value="regular-socials">Regular Posts and Discussions</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
-                <p>Please reach out to <a href="mailto:david@psychologysquared.com.au"
-                        style="color: var(--primary-accent);">david@psychologysquared.com.au</a> if you have any
-                    questions!</p>
-            </div>
-            <div class="c-button-wrapper">
-                <button id="submitBtn" class="c-submit-button" type="submit">Join the Waitlist</button>
+                <div class="price-period">per month</div>
             </div>
         </div>
-    </form>
-
-    <div class="success-message" id="successMessage">
-        <div class="success-icon">✓</div>
-        <h3>Welcome to the Community!</h3>
-        <p>You're on the list.</p>
-        <p>We have sent you an email to <strong id="address-entered">your address</strong>.</p>
-        <p>If you haven’t received an email please check the address is correct, otherwise please get in touch
-            with <a href="mailto:david@psychologysquared.com.au"
-                style="color: var(--primary-accent);">david@psychologysquared.com.au</a></p>
-    </div>
-    <div class="error-message" id="errorMessage">
-        <div class="error-icon">✗</div>
-        <h3>Something went wrong</h3>
-        <p>There was an error submitting your waitlist entry. Please contact our support team <a
-                href="mailto:joshkeisler.au@gmail.com">here</a>.</p>
-    </div>
-    <div class="waiting-message" id="waitingMessage">
-        <div class="waiting-icon">⏳</div>
-        <h3>Processing your waitlist entry</h3>
-        <p>Your entry is being processed but there is a delay from the server. Please leave this page open
-            if you would like to see that the entry was successful.</p>
-    </div>
-</div>
+        <ul class="features-list">
+            <li>All standard member benefits</li>
+            <li>You agree to contribute actively to community discussions</li>
+            <li>You agree to help onboard new members</li>
+            <li>Share your expertise, questions and insights</li>
+            <li>Recognition as community facilitator</li>
+        </ul>
+        <footer class="special-note">
+            <p><strong>Engagement Requirements:</strong><br>The application form will be sent to you immediately upon sign-up.<br>To continue the discount beyond the first month, your submitted form will be reviewed and requires approval.</p>
+        </footer>
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=VOLZSWGB" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
+        </div>
+    </article>
+    <article class="c-feature featured">
+        <header class="card-header">
+            <div class="header-title">
+                <h3 id="memberPlanTitle">Founder</h3>
+                <span class="c-badge limited-badge-position" id="planBadge">
+                    <span id="planBadgeText">Limited Time</span>
+                </span>
+            </div>
+            <p aria-describedby="memberPlanTitle"><strong>75% off for 12 months.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
+        </header>
+        <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="9.75" data-annually="9.75">9.75</span>
+                </div>
+                <div class="price-period-annually">per month</div>
+            </div>
+        </div>
+        <ul class="features-list">
+            <li>75% off for 12 months</li>
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/founder-75percent-discount?coupon_code=TKUKTFLU" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
+        </div>
+    </article>
+    <article class="c-feature">
+        <header class="card-header">
+            <div class="header-title margin-top">
+                <h3 id="memberPlanTitle">Provisional Psychologists</h3>
+            </div>
+            <p aria-describedby="memberPlanTitle"><strong>Provisional Psychologists get 12 months free.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
+        </header>
+        <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-original" data-monthly="$39" data-annually="$39">$39</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="0" data-annually="0">0</span>
+                </div>
+                <div class="price-period-annually">per month</div>
+            </div>
+        </div>
+        <ul class="features-list">
+            <li>12 months free</li>
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/provisional-psychologist-membership?coupon_code=1CUTGSYR" target="_blank" class="c-submit-button" type="button">Start Your Free Trial</a>
+        </div>
+    </article>
+    <article class="c-feature disabled">
+        <header class="card-header">
+            <div class="header-title margin-top">
+                <h3 id="memberPlanTitle">Standard</h3>
+                <span class="c-badge limited-badge-position" id="planBadge">
+                    <span id="planBadgeText">Starting January</span>
+                </span>
+            </div>
+            <p aria-describedby="memberPlanTitle" class="card-header-subtext">Unlimited access to events, resources, courses and a network of professional clinicians.</p>
+        </header>
+        <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle">
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div>
+        <div class="price-container">
+            <div class="free-trial-tag">1 Month Free Trial</div>
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="39" data-annually="29">39</span>
+                </div>
+                <div class="price-period-annually">per month</div>
+            </div>
+        </div>
+        <ul class="features-list">
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+        <div class="c-button-wrapper">
+            <a href="https://aiforclin.circle.so/checkout/membership" class="c-submit-button" type="button">Start Your Free Trial</a>
+        </div>
+    </article>
+</section>
