--- a/community/landing-page.html
+++ b/community/landing-page.html
@@ -1,6 +1,8 @@
 ---
 layout: circle-community
 title: Join the AI for Clinicians Community
+robots: noindex, nofollow
+redirect_to: /community/
 ---
 
 <div class="c-hero">
@@ -92,12 +94,10 @@ title: Join the AI for Clinicians Community
 
 <div class="c-bottom-section">
     <h2>Ready to Transform Your Practice?</h2>
-    <p>Join the waitlist and be among the first to access our exclusive community when we launch. Get early
-        access to resources, connect with pioneers in AI-integrated healthcare, and help shape the future of our
-        community.</p>
+    <p>Gain access to key dicussions, a network of clincial professionals and exclusive events, courses, and resources.</p>
 
     <div class="cta-buttons">
         <a href="#" class="c-submit-button" id="joinBtn">Join the Community</a>
-        <a href="#" class="c-submit-button" id="learnMoreBtn">Learn More</a>
+        <a href="#" class="c-submit-button" id="learnMoreBtn">Visit the Community</a>
     </div>
 </div>
