--- a/community/memberships.html
+++ b/community/memberships.html
@@ -1,6 +1,8 @@
 ---
 layout: circle-community
 title: Choose Your Membership
+robots: noindex, nofollow
+redirect_to: /community/
 ---
 
 <section class="c-hero" aria-labelledby="memberships-title">
