landing page done

--- a/community/index.html
+++ b/community/index.html
@@ -19,7 +19,7 @@ title: Join the AI for Clinicians Community
 <section class="video-and-benefits-section">
     <h2 class="section-header">What You'll Get as a Member</h2>
     <div class="video-benefits-content">
-        <div class="video-placeholder"></div>
+        <img src="/community/images/demo.png" alt="" class="video-placeholder">
         <ul class="benefits-list">
             <li>
 
@@ -27,7 +27,7 @@ title: Join the AI for Clinicians Community
                 <img src="/community/images/gold-discussion.png" alt="" class="benefit-icon">
                 <h3 class="benefit-title">Organised Discussions</h3>
             </div>
-            <p class="benefit-description">Engage in meaningful converstaions and stay up-to-date in a single place that has more structure than your typical social media platform.</p>
+            <p class="benefit-description">Engage in meaningful converstaions and stay up-to-date in a space that has more structure than what's available in typical social media platforms.</p>
         </li>
         <li>
             <div class="benefit-header">
