benefits list circle landing page

--- a/community/index.html
+++ b/community/index.html
@@ -21,41 +21,44 @@ title: Join the AI for Clinicians Community
     <div class="video-benefits-content">
         <img src="/community/images/demo.png" alt="" class="video-placeholder">
         <ul class="benefits-list">
-            <li>
-
+        <li>
             <div class="benefit-header">
-                <img src="/community/images/gold-discussion.png" alt="" class="benefit-icon">
-                <h3 class="benefit-title">Organised Discussions</h3>
+                <img src="/community/images/gold-book.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Resources (with Courses Coming Soon!)</h3>
             </div>
-            <p class="benefit-description">Engage in meaningful converstaions and stay up-to-date in a space that has more structure than what's available in typical social media platforms.</p>
+            <p class="benefit-description">Access exclusive resources, with new courses on getting started with AI and its ethical, responsible use coming soon.</p>
         </li>
         <li>
             <div class="benefit-header">
                 <img src="/community/images/gold%20people.png" alt="" class="benefit-icon">
                 <h3 class="benefit-title">Network</h3>
             </div>
-            <p class="benefit-description">Connect with professional clinicians and industry experts who are actively engaged in AI use within clinical practice.</p>
+            <p class="benefit-description">Connect with clinicians who are interested in using AI in their clinical work.</p>
         </li>
         <li>
             <div class="benefit-header">
                 <img src="/community/images/gold%20calendar.png" alt="" class="benefit-icon">
                 <h3 class="benefit-title">Events</h3>
             </div>
-            <p class="benefit-description">Explore new topics and ideas with events and workshops.</p>
+            <p class="benefit-description">Explore new topics and ideas through events and workshops.</p>
         </li>
         <li>
             <div class="benefit-header">
-                <img src="/community/images/gold-book.png" alt="" class="benefit-icon">
-                <h3 class="benefit-title">Resources & Courses</h3>
-            </div>
-            <p class="benefit-description">Gain access to exclusive resources and courses created by experts.</p>
-        </li>
-                <li>
-            <div class="benefit-header">
                 <img src="/community/images/gold%20laptop.png" alt="" class="benefit-icon">
-                <h3 class="benefit-title">Discounted Tools</h3>
+                <h3 class="benefit-title">Discounted AI Tools</h3>
             </div>
-            <p class="benefit-description">Gain access to discounted tools and learn from like-minded clinicians on how to use them.</p>
+            <p class="benefit-description">Access discounted AI tools and learn from like-minded clinicians how to use them.</p>
+        </li>
+        <li>
+            <div class="benefit-header">
+                <img src="/community/images/gold-discussion.png" alt="" class="benefit-icon">
+                <h3 class="benefit-title">Discussions</h3>
+            </div>
+            <p class="benefit-description">
+                Explore the topics you are curious about with clinicians who are using AI tools.
+                Conversations are designed for all experience levels.
+                Discussion groups are easy to find and simple to follow so you can stay up to date.
+            </p>
         </li>
         </ul>
     </div>
