--- a/community/index.html
+++ b/community/index.html
@@ -24,9 +24,9 @@ title: Join the AI for Clinicians Community
         <li>
             <div class="benefit-header">
                 <img src="/community/images/gold-book.png" alt="" class="benefit-icon">
-                <h3 class="benefit-title">Resources (with Courses Coming Soon!)</h3>
+                <h3 class="benefit-title">Resources (with courses coming soon!)</h3>
             </div>
-            <p class="benefit-description">Access exclusive resources, with new courses on getting started with AI and its ethical, responsible use coming soon.</p>
+            <p class="benefit-description">Access exclusive resources, with new courses on mindblowing uses of AI for clinicians, getting started with AI, and ethicial and responsible uses of AI, and heaps more coming soon!</p>
         </li>
         <li>
             <div class="benefit-header">
@@ -47,7 +47,7 @@ title: Join the AI for Clinicians Community
                 <img src="/community/images/gold%20laptop.png" alt="" class="benefit-icon">
                 <h3 class="benefit-title">Discounted AI Tools</h3>
             </div>
-            <p class="benefit-description">Access discounted AI tools and learn from like-minded clinicians how to use them.</p>
+            <p class="benefit-description">Discounts on a variety of AI tools.</p>
         </li>
         <li>
             <div class="benefit-header">
@@ -71,7 +71,7 @@ title: Join the AI for Clinicians Community
             <div class="header-title margin-top">
                 <h3 id="super-member-plan">Super Member</h3>
             </div>
-            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>This is for active active who want to proactively develop discussions and support fellow members.</p>
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all Founder benefits.</strong><br>This is for active members who want to proactively develop discussions and support fellow members.</p>
         </header>
         <div class="price-container">
             <div class="free-trial-tag">1 Month Free Trial</div>
@@ -104,7 +104,7 @@ title: Join the AI for Clinicians Community
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
-            <p aria-describedby="memberPlanTitle"><strong>75% off for 12 months.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
+            <p aria-describedby="memberPlanTitle"><strong>Limited Time - 75% off for 12 months.</strong><br>Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
         <div class="price-container">
             <div class="free-trial-tag">1 Month Free Trial</div>
@@ -117,9 +117,9 @@ title: Join the AI for Clinicians Community
             </div>
         </div>
         <ul class="features-list">
-            <li>75% off for 12 months</li>
-            <li>Unlimited access to community platform</li>
-            <li>Knowledge base & resources</li>
+            Unlimited access to:
+            <li>Community platform</li>
+            <li>Resources</li>
             <li>Discussion forums</li>
             <li>Expert contributor content</li>
             <li>Regular live discussions and networking (online)</li>
@@ -147,9 +147,9 @@ title: Join the AI for Clinicians Community
             </div>
         </div>
         <ul class="features-list">
-            <li>12 months free</li>
-            <li>Unlimited access to community platform</li>
-            <li>Knowledge base & resources</li>
+            Unlimited access to:
+            <li>Community platform</li>
+            <li>Resources</li>
             <li>Discussion forums</li>
             <li>Expert contributor content</li>
             <li>Regular live discussions and networking (online)</li>
@@ -187,8 +187,9 @@ title: Join the AI for Clinicians Community
             </div>
         </div>
         <ul class="features-list">
-            <li>Unlimited access to community platform</li>
-            <li>Knowledge base & resources</li>
+            Unlimited access to:
+            <li>Community platform</li>
+            <li>Resources</li>
             <li>Discussion forums</li>
             <li>Expert contributor content</li>
             <li>Regular live discussions and networking (online)</li>
