Remove date badge

--- a/community/index.html
+++ b/community/index.html
@@ -163,9 +163,9 @@ title: Join the AI for Clinicians Community
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Standard</h3>
-                <span class="c-badge limited-badge-position" id="planBadge">
+                <!-- <span class="c-badge limited-badge-position" id="planBadge">
                     <span id="planBadgeText">Starting January</span>
-                </span>
+                </span> -->
             </div>
             <p aria-describedby="memberPlanTitle" class="card-header-subtext">Unlimited access to events, resources, courses and a network of professional clinicians.</p>
         </header>
