compliance pack note

--- a/compliance/index.html
+++ b/compliance/index.html
@@ -63,7 +63,7 @@ subnav:
         implement AI in their practices. It serves as a cost-effective
         alternative to independently developing compliance materials. This
         purchase item for a single purchaser for their own access
-        <strong>only</strong>
+        <strong>only</strong>.
       </p>
     </div>
 
@@ -188,8 +188,7 @@ subnav:
           not intended to be a substitute for legal advice, and should not be
           relied upon as such. You should seek independent legal advice or other
           professional advice in relation to any particular matters you or your
-          organisation may have. The content is current as at the date of
-          initial publication.
+          organisation may have. The content was developed based on Australian standards as at 31 Jan 2025.
         </p>
       </div>
 
